--- a/pex3SA.csproj
+++ b/pex3SA.csproj
@@ -567,8 +567,14 @@
     <Content Include="testcases\pex2\main1.txt" />
     <Content Include="testcases\pex2\while1.txt" />
     <Content Include="testcases\pex2\while2.txt" />
-    <Content Include="testcases\pex3\y_is_not_declared.txt" />
-    <Content Include="testcases\pex3\x_already_declared.txt" />
+    <Content Include="testcases\pex3\bad_final_y_declared_not_a_type.txt" />
+    <Content Include="testcases\pex3\bad_final_types_y_z_no_match.txt" />
+    <Content Include="testcases\pex3\bad_final_y_not_declared.txt" />
+    <Content Include="testcases\pex3\bad_final_x_already_declared.txt" />
+    <Content Include="testcases\pex3\good_proper_variable_declaration.txt" />
+    <Content Include="testcases\pex3\bad_y_is_declared_not_a_type.txt" />
+    <Content Include="testcases\pex3\bad_y_is_not_declared.txt" />
+    <Content Include="testcases\pex3\bad_x_already_declared.txt" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include=".vs\parserPex\FileContentIndex\merges\" />
