--- a/pex3SA.csproj
+++ b/pex3SA.csproj
@@ -567,11 +567,24 @@
     <Content Include="testcases\pex2\main1.txt" />
     <Content Include="testcases\pex2\while1.txt" />
     <Content Include="testcases\pex2\while2.txt" />
+    <Content Include="testcases\pex3\bad_and_or_not_type_no_bool.txt" />
+    <Content Include="testcases\pex3\bad_bool_types_not_int_or_float.txt" />
+    <Content Include="testcases\pex3\bad_bool_types_no_match.txt" />
+    <Content Include="testcases\pex3\bad_expr_undeclared_var_used.txt" />
+    <Content Include="testcases\pex3\bad_expr_type_name_used_not_var_name.txt" />
     <Content Include="testcases\pex3\bad_final_y_declared_not_a_type.txt" />
     <Content Include="testcases\pex3\bad_final_types_y_z_no_match.txt" />
     <Content Include="testcases\pex3\bad_final_y_not_declared.txt" />
     <Content Include="testcases\pex3\bad_final_x_already_declared.txt" />
-    <Content Include="testcases\pex3\good_proper_variable_declaration.txt" />
+    <Content Include="testcases\pex3\bad_and_or_type_no_match.txt" />
+    <Content Include="testcases\pex3\bad_operators_types_not_int_or_float.txt" />
+    <Content Include="testcases\pex3\bad_while_expr_not_bool.txt" />
+    <Content Include="testcases\pex3\bad_operators_types_no_match.txt" />
+    <Content Include="testcases\pex3\good_and_or_not.txt" />
+    <Content Include="testcases\pex3\good_while_expr.txt" />
+    <Content Include="testcases\pex3\good_if_expr.txt" />
+    <Content Include="testcases\pex3\bad_if_expr_not_bool.txt" />
+    <Content Include="testcases\pex3\good_expr_and_variable_declaration.txt" />
     <Content Include="testcases\pex3\bad_y_is_declared_not_a_type.txt" />
     <Content Include="testcases\pex3\bad_y_is_not_declared.txt" />
     <Content Include="testcases\pex3\bad_x_already_declared.txt" />
